<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieShows</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tvs">TVs</string>
    <string name="watch_lists">Watch Lists</string>
    <string name="an_error_occurred_during_the_operation">An error occurred during the operation.</string>
    <string name="connect_to_the_internet">Connect to the internet</string>
    <string name="check_your_connection">Check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="error_header">Error!</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="movies_details">Details</string>
    <string name="duration">Duration</string>
    <string name="min">min.</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="genres">Genres</string>
    <string name="similar_movies">Similar movies</string>
    <string name="reviews">Reviews</string>
    <string name="show_all">Show All</string>
    <string name="load_error" translatable="false">Oops, can\'t load data</string>
    <string name="try_again">Try again</string>
    <string name="trailer">Trailer</string>
    <string name="hide">Hide</string>
    <string name="read_more">Read more</string>
    <string name="videos">Videos</string>
    <string name="the_video_list_is_empty">The video list is empty</string>
    <string name="thumbnail_firstPart">https://i1.ytimg.com/vi/</string>
    <string name="thumbnail_secondPart">/hqdefault.jpg</string>
    <string name="youtube_url">https://www.youtube.com/watch?v=</string>
    <string name="the_list_of_films_is_empty">The list of films is empty</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="search">Search</string>
    <string name="search_title" translatable="false">Search title</string>
    <string name="search_hint" translatable="false">Search hint</string>
    <string name="the_search_yielded_no_results">The search yielded no results</string>
    <string name="on_the_air">On the air</string>
    <string name="top_rated_tv_show">Top rated Tv show</string>
    <string name="popular_tv_shows">Popular Tv Shows</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="empty">""</string>
    <string name="number_of_episodes">Num. of ep.</string>
    <string name="created_by">Created by</string>
    <string name="seasons">Seasons</string>
    <string name="please_wait">Please wait…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_there_sign_in_continue">Hello there, sign in continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="empty_text_field">Empty text field</string>
    <string name="incorrect_email">Incorrect email</string>
    <string name="the_password_must_contain_more_than_second_characters">The password must contain more than second characters.</string>
    <string name="profile">Profile</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="the_email_was_not_found_in_the_system">The email was not found in the system</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="enter_username">Enter username</string>
    <string name="username">Username</string>
    <string name="invalid_user_name">Invalid user name</string>
    <string name="sign_out">Sign out</string>
    <string name="incorrect_api_key">Incorrect API key</string>
    <string name="session_creation_denied">Session creation denied</string>
    <string name="there_was_a_problem_with_authorization">There was a problem with authorization</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorites">Favorites</string>
    <string name="production_companies">Production companies</string>
    <string name="video">Video</string>
    <string name="no_comments">No comments</string>
    <string name="access_denied">Access denied</string>
    <string name="comment">Comment</string>
    <string name="the_session_was_not_found">The session was not found</string>
    <string name="your_account_is_no_longer_active_contact_tmdb_message">Your account is no longer active. Contact TMDb if this is an error</string>
    <string name="the_email_address_has_not_been_confirmed">The email address has not been confirmed.</string>
    <string name="tmdb_service_is_not_available_from_russia">TMDB service is not available from Russia</string>
    <string name="image_description">Image description</string>
    <string name="maybe_you_re_looking_for">Maybe you\'re looking for</string>
    <string name="it_may_be_useful">It may be useful</string>
    <string name="episodes">Episodes</string>
    <string name="there_are_no_episodes">There are no episodes</string>
    <string name="crew">Crew</string>
    <string name="poster_description">Poster description</string>
    <string name="backdrop_description">Backdrop description</string>
    <string name="select_type">Select type</string>
    <string name="icon_description">Icon description</string>
    <string name="watchlist_movies">Watchlist movies</string>
    <string name="avatar_description">Avatar description</string>
    <string name="watchlist_tv">Watchlist TV</string>
    <string name="skip">Skip</string>
    <string name="sign_in_header">Sign in</string>
    <string name="in_order_to_see_the_profile_data_message">In order to see the profile data, you need to log in</string>
    <string name="you_must_have_a_tmdb_account_in_order_to_log_in">You must have a TMDB account in order to log in</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_death">Date of death</string>
    <string name="biography">Biography</string>
    <string name="place_of_birth">Place of birth</string>
    <plurals name="count_replies">
        <item quantity="zero">zero</item>
        <item quantity="one">%1$d reply</item>
        <item quantity="two">%1$d replies</item>
        <item quantity="few">%1$d replies</item>
        <item quantity="many">%1$d replies</item>
        <item quantity="other">%1$d replies</item>
    </plurals>
</resources>