<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movies_tab"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.ru.movieshows.movies.presentation.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.ru.movieshows.movies.presentation.details.MovieDetailsFragment"
        android:label="@string/empty"
        tools:layout="@layout/fragment_movie_details" />

    <fragment
        android:id="@+id/movieSearchFragment"
        android:name="com.ru.movieshows.movies.presentation.search.MovieSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_movie_search" />

    <fragment
        android:id="@+id/upcomingMoviesFragment"
        android:name="com.ru.movieshows.movies.presentation.upcoming.UpcomingMoviesFragment"
        android:label="@string/upcoming_movies"
        tools:layout="@layout/fragment_upcoming_movies" />

    <fragment
        android:id="@+id/popularMoviesFragment"
        android:name="com.ru.movieshows.movies.presentation.popular.PopularMoviesFragment"
        android:label="@string/popular_movies"
        tools:layout="@layout/fragment_popular_movies" />

    <fragment
        android:id="@+id/topRatedMoviesFragment"
        android:name="com.ru.movieshows.movies.presentation.top_rated.TopRatedMoviesFragment"
        android:label="@string/top_rated_movies"
        tools:layout="@layout/fragment_top_rated_movies" />

    <fragment
        android:id="@+id/movieReviewsFragment"
        android:name="com.ru.movieshows.movies.presentation.reviews.MovieReviewsFragment"
        android:label="@string/reviews"
        tools:layout="@layout/fragment_movie_reviews" />

</navigation>