<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.ru.movieshows.signin.presentation.signin.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.ru.movieshows.splash.presentation.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/tabsFragment"
        android:name="com.ru.movieshows.navigation.presentation.TabsFragment"
        android:label="fragment_tabs"
        tools:layout="@layout/fragment_tabs" />

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.ru.movieshows.movies.presentation.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/tvShowsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.tv_shows.TvShowsFragment"
        android:label="@string/tvs"
        tools:layout="@layout/fragment_tv_shows" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.ru.movieshows.profile.presentation.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.ru.movieshows.movies.presentation.details.MovieDetailsFragment"
        android:label="@string/empty"
        tools:layout="@layout/fragment_movie_details" />

    <fragment
        android:id="@+id/tvShowDetailsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.tv_show_details.TvShowDetailsFragment"
        android:label="@string/empty"
        tools:layout="@layout/fragment_tv_show_details" />

    <fragment
        android:id="@+id/movieSearchFragment"
        android:name="com.ru.movieshows.movies.presentation.search.MovieSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_movie_search" />

    <fragment
        android:id="@+id/tvShowSearchFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.search.TvShowSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_tv_show_search" />

    <fragment
        android:id="@+id/upcomingMoviesFragment"
        android:name="com.ru.movieshows.movies.presentation.upcoming.UpcomingMoviesFragment"
        android:label="@string/upcoming_movies"
        tools:layout="@layout/fragment_upcoming_movies" />

    <fragment
        android:id="@+id/popularMoviesFragment"
        android:name="com.ru.movieshows.movies.presentation.popular.PopularMoviesFragment"
        android:label="@string/popular_movies"
        tools:layout="@layout/fragment_popular_movies" />

    <fragment
        android:id="@+id/topRatedMoviesFragment"
        android:name="com.ru.movieshows.movies.presentation.top_rated.TopRatedMoviesFragment"
        android:label="@string/top_rated_movies"
        tools:layout="@layout/fragment_top_rated_movies" />

    <fragment
        android:id="@+id/popularTvShowsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.popular.PopularTvShowsFragment"
        android:label="@string/popular_tv_shows"
        tools:layout="@layout/fragment_popular_tv_shows" />

    <fragment
        android:id="@+id/topRatedTvShowsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.top_rated.TopRatedTvShowsFragment"
        android:label="@string/top_rated_tv_shows"
        tools:layout="@layout/fragment_top_rated_tv_shows" />

    <fragment
        android:id="@+id/onTheAirTvShowsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.on_the_air_tv_shows.OnTheAirTvShowsFragment"
        android:label="@string/on_the_air"
        tools:layout="@layout/fragment_on_the_air_tv_shows" />
    <fragment
        android:id="@+id/movieReviewsFragment"
        android:name="com.ru.movieshows.movies.presentation.reviews.MovieReviewsFragment"
        android:label="@string/reviews"
        tools:layout="@layout/fragment_movie_reviews" />

    <fragment
        android:id="@+id/tvShowReviewsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.reviews.TvShowReviewsFragment"
        android:label="@string/reviews"
        tools:layout="@layout/fragment_tv_show_reviews" />

    <fragment
        android:id="@+id/seasonEpisodesFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.episodes.SeasonEpisodesFragment"
        android:label="@string/episodes"
        tools:layout="@layout/fragment_season_episodes" />

    <fragment
        android:id="@+id/episodeDetailsFragment"
        android:name="com.ru.movieshows.tv_shows.presentation.episode_details.EpisodeDetailsFragment"
        android:label="@string/empty"
        tools:layout="@layout/fragment_episode_details" />

</navigation>