<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/avatarCardView"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_48"
        app:cardCornerRadius="@dimen/dp_48"
        app:strokeWidth="@dimen/dp_0">

        <ImageView
            android:id="@+id/avatarImageView"
            tools:src="@drawable/avatar_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar_description"
            />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarCardView"
        android:layout_marginTop="@dimen/dp_12"
        tools:text="@string/ivanov_ivan"
        style="?attr/textAppearanceHeadline5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:text="@string/sign_out"
        style="?attr/textAppearanceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        android:textAlignment="textStart"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:drawableEnd="@drawable/arrow_right"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/notAuthenticatedHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/in_order_to_see_the_profile_data_message"
        style="?attr/textAppearanceHeadline6"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_header"
        style="?attr/textAppearanceBody1"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notAuthenticatedHeaderTextView"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/progressGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="progressBar"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/authenticatedGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="avatarCardView, nameTextView, logoutButton"
        android:visibility="visible"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/notAuthenticatedGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="notAuthenticatedHeaderTextView, signInButton"
    />

</androidx.constraintlayout.widget.ConstraintLayout>