<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/dp_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCard"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="@dimen/dp_8"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    tools:background="@color/red"
                    android:src="@drawable/poster_placeholder_bg"
                    android:contentDescription="@string/poster_description" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/seasonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Lorem Ipsum is simply dummy text."
                    style="?attr/MovieShows.TextAppearance.Body1"
                    android:maxLines="3"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp_8">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="@dimen/dp_16">

                        <TextView
                            android:id="@+id/dateBirthdayHeaderTextView"
                            style="?attr/MovieShows.TextAppearance.Body3.Hint.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth"
                            android:textAllCaps="true"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/dateBirthdayTextView"
                            style="?attr/MovieShows.TextAppearance.Body3.Bold.Accent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_16"
                            tools:text="2021-12-15"
                            android:maxLines="1"
                            android:ellipsize="end"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dateDeathHeaderTextView"
                            style="?attr/MovieShows.TextAppearance.Body3.Hint.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_death"
                            android:textAllCaps="true"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/dateDeathTextView"
                            style="?attr/MovieShows.TextAppearance.Body3.Bold.Accent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:layout_marginEnd="@dimen/dp_16"
                            tools:text="2021-12-15"
                            android:maxLines="1"
                            android:ellipsize="end"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/placeOfBirthHeaderTextView"
                    style="?attr/MovieShows.TextAppearance.Body3.Hint.Bold"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_of_birth"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/placeOfBirthTextView"
                    style="?attr/MovieShows.TextAppearance.Body3.Bold.Accent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginEnd="@dimen/dp_16"
                    tools:text="Concord, California, USA"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/biographyHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biography"
            android:layout_marginTop="@dimen/dp_8"
            android:textAllCaps="true"
            style="?attr/MovieShows.TextAppearance.Body3.Hint.Bold"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/biographyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."
            style="?attr/MovieShows.TextAppearance.Body3"
            android:ellipsize="end"
            android:layout_marginTop="@dimen/dp_8"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>